# Robotica

install/: local_setup.sh  setup.sh
install/car_pkg/lib/car_pkg/: car_camera_driver  road_camera_driver  road_follower  traffic_sign_detector  vehicle_controller
install/car_pkg/share/car_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/webots_ros2/share/webots_ros2/: package.sh
install/webots_ros2_control/share/webots_ros2_control/: package.sh
install/webots_ros2_crazyflie/share/webots_ros2_crazyflie/: package.sh
install/webots_ros2_driver/share/webots_ros2_driver/: package.sh
install/webots_ros2_epuck/share/webots_ros2_epuck/: package.sh
install/webots_ros2_husarion/share/webots_ros2_husarion/: package.sh
install/webots_ros2_importer/lib/webots_ros2_importer/: urdf2proto  xacro2proto
install/webots_ros2_importer/share/webots_ros2_importer/: package.sh
install/webots_ros2_mavic/share/webots_ros2_mavic/: package.sh
install/webots_ros2_msgs/share/webots_ros2_msgs/: local_setup.sh  package.sh
log/: latest_build
ros2_ws/: iniciar.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/car_pkg/: .city_traffic.wbproj  package.xml  setup.cfg  setup.py
ros2_ws/src/car_pkg/car_pkg/: road_follower.py  traffic_sign_detector.py  vehicle_controller.py
ros2_ws/src/car_pkg/launch/: car_launch.py
ros2_ws/src/car_pkg/resource/: car.urdf
webots-R2025a-x86-64/webots/docs/: list.txt
webots-R2025a-x86-64/webots/resources/: proto-list.xml
(+825 files in other folders)
