<?xml version="1.0"?>
<package format="3">
  <name>car_pkg</name>
  <version>1.0.0</version>
  <description>Simulación de vehículo autónomo en Webots usando ROS2</description>
  <maintainer email="GrupoAM@alumnos.upm.es">GrupoAM</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>webots_ros2</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
